--- a/steadman.digital/templates/base.html
+++ b/steadman.digital/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en" style="background-color: lightgray;">
   <head>
     <!-- Required meta tags -->
@@ -11,17 +12,20 @@
         <title>Steadman.Digital</title>
     </head>
 
-    <!-- Grey with black text -->
-<nav class="navbar navbar-expand-sm" style="background-color: lightgray;">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/" style="color: black; font-size: large; font-weight: 500;">Steadman Digital</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/code/class-transcript">Class Transcript (Alpha)</a>
-      </li>
-    </ul>
-  </nav>
+          <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-dark" id="ftco-navbar">
+            <div class="container">
+              <a class="navbar-brand" href="/" style="color: black;">Steadman.Digital</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+              </button>
+      
+              <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item cta"><a href="/code/class-transcript" class="nav-link" style="color:rgb(52, 112, 222);"><span>Class Transcript (Alpha)</span></a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
     {% block content%}
     {% endblock %} 
@@ -31,4 +35,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
 </html>
