--- a/steadman.digital/templates/base.html
+++ b/steadman.digital/templates/base.html
@@ -12,7 +12,7 @@
         <title>Steadman.Digital</title>
     </head>
 
-          <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-dark" style="background-image: url('https://images.wallpapersden.com/image/download/topography-abstract-black-texture_64113_2560x1440.jpg');" id="ftco-navbar">
+          <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-dark" id="ftco-navbar">
             <div class="container">
               <a class="navbar-brand" href="/" style="color: black;">Steadman.Digital</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
       
               <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                  <li class="nav-item cta"><a href="/code/class-transcript" class="nav-link" style="color:rgb(52, 112, 222);"><span>Class Transcript (Alpha)</span></a></li>
+                  <li class="nav-item cta"><a href="/code/class-transcrip" class="nav-link" style="color:rgb(52, 112, 222);"><span>Class Transcript (Alpha)</span></a></li>
                 </ul>
               </div>
             </div>
