--- a/steadman.digital/templates/base.html
+++ b/steadman.digital/templates/base.html
@@ -21,7 +21,7 @@
       
               <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                  <li class="nav-item cta"><a href="/code/class-transcrip" class="nav-link" style="color:rgb(52, 112, 222);"><span>Class Transcript (Alpha)</span></a></li>
+                  <li class="nav-item cta"><a href="/code/class-transcript" class="nav-link" style="color:rgb(52, 112, 222);"><span>Class Transcript (Alpha)</span></a></li>
                 </ul>
               </div>
             </div>
