--- a/steadman.digital/templates/home.html
+++ b/steadman.digital/templates/home.html
@@ -40,24 +40,24 @@
             </p>
         </div>
 
-            <div class="container">
-                <img src="https://cdn.programiz.com/sites/tutorial2program/files/cover-artwork.png" width="200px" style="float: left; padding-left: 20px;" alt="programiz"></img>
-                    <div class="container" style="width: 300px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
+            <div class="container-fluid">
+                <img src="https://cdn.programiz.com/sites/tutorial2program/files/cover-artwork.png" width="180px" style="float: left; padding-left: 20px;" alt="programiz"></img>
+                    <div class="container" style="width: 270px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
                         <h4>Programiz: Learn Python</h4>
                         <p>This iPhone app is another amazing way to start python, it includes everything you need to code right on your phone!</p>
                     </div>
                 <img src="https://hackr.io/blog/how-to-learn-javascript-quickly/thumbnail/large" width="200px" style="float: left; padding-left: 20px;" alt="how-to-learn-javascript-quickly"></img>
-                    <div class="container" style="width: 300px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
+                    <div class="container" style="width: 270px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
                         <h4>Learn Javascript</h4>
                         <p>Learn Javascript is a great place to get started with frontend web development and a little back end with node.js.</p>
                     </div>
                 <img src="https://i.ytimg.com/vi/GhQdlIFylQ8/maxresdefault.jpg" width="200px" style="float: left; padding-left: 20px;" alt="free-code-camp-c-sharp"></img>
-                    <div class="container" style="width: 300px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
+                    <div class="container" style="width: 270px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
                         <h4>Free Code Camp C# Tutorial</h4>
                         <p>This YouTube tutorial is super easy to follow for completely new programmers and helps you get into game development with Unity.</p>
                     </div>
-                <img src="https://images-na.ssl-images-amazon.com/images/I/91d-3mzu8HL.jpg" width="190px" style="float: left; padding-left: 20px;" alt="invent with python"></img>
-                    <div class="container" style="width: 360px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/91d-3mzu8HL.jpg" width="160px" style="float: left; padding-left: 20px;" alt="invent with python"></img>
+                    <div class="container" style="width: 270px; padding-left: 20px; padding-top: 20px; padding-bottom: 50px; float: left;">
                         <h4>Invent With Python</h4>
                         <p>This e-book tutorial is amazing for beginners and provides entertaining projects to learn with. This is my personal favorite resource.</p>
                     </div>
